# netplika

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h  dist-maketable.c  dist-maketable.h  dist.c  emulate.c  google_dns.data  hist.c  hist.h  main.c  mark.c  netlink-private.h  probe.c  tc-cgroup.sh  tc-mark.sh  tc.c  tc.h  tcp.c  tcp.h  timing.c  timing.h  ts.c  ts.h  utils.c  utils.h
scrips/: tc-reset.sh
src/: config.h  dist-maketable.c  dist-maketable.h  dist.c  emulate.c  main.c  mark.c  netlink-private.h  probe.c  timing.c  ts.c  ts.h  utils.h
